@@ -3,6 +3,13 @@
                           avrtest NEWS
                           ============
 
+* avrtest.h now works with -mint8.                               2024-06-12
+  Notice that an -mint8 programm must be terminated with
+  some abort flavour or with avrtest_exit.  Returning from
+  main or using [__builtin_]exit will only return an 8-bit
+  value, but the library functions are expecting a 16-bit
+  exit value.
+
 * Support syscalls LOG_FMT_F7T etc. to log libgcc's              2024-06-10
   internal IEEE double representation.
 
