@@ -1,3 +1,9 @@
+2024-06-12  Georg-Johann Lay  <avr@gjlay.de>
+
+	Support -mint8 in avrtest.h.
+
+	* avrtest.h: Use __INT32_TYPE__ instead of long, etc.
+
 2024-06-10  Georg-Johann Lay  <avr@gjlay.de>
 
 	Support syscalls LOG_FMT_F7T etc. to log libgcc's
